# LGWA-2024-tutorial

./: .gitignore  README.md
Jan_scripts/: Errors_BBH_mass.py  Errors_BBH_spin.py  Errors_DWD.py  Horizon_DWD.py
tutorial/: exercises.ipynb  fisher-presentation.qmd  fisher-presentation.quarto_ipynb  pyproject.toml
