[tool.poetry]
name = "introduction"
version = "0.1.0"
description = "Tutorial on the forecasting tools for LGWA"
authors = ["jacopok <jacopok@gmail.com>"]
license = "GPL3"    
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.24.3"
PyCBC = "^2.2.0"
matplotlib = "^3.7.1"
healpy = "^1.16.2"
astropy = "^5.2.2"
scipy = "^1.10.1"
jupyter = "^1.0.0"
corner = "^2.2.2"
GWFish = { git = "https://github.com/janosch314/GWFish", branch = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
